[package]
name = "libharu"
version = "0.1.5"
authors = ["saelay <saelay@outlook.jp>"]
edition = "2018"

description = "Rust binding for libharu(http://libharu.org/) PDF library."
repository = "https://github.com/saelay/libharu-rs"
license = "MIT"
readme = "README.md"

categories = ["rendering"]
keywords = ["pdf", "libharu", "haru"]


[dependencies]
libharu-sys = {git = "https://github.com/WindfallProphet/libharu-sys"}
anyhow = "1.0.95"
bitflags = "2.8.0"

[dev-dependencies]
encoding_rs = "0.8.35"
